# iceberg-cpp

./: .asf.yaml  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  BUILD_CHINA.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  build-rest-tests.sh  conanfile.py  meson.build  meson.options  requirements.txt  sitemap.xml  test_detail.xml
src/iceberg/: CMakeLists.txt  SNAPSHOT_UPDATE_API_COVERAGE.md  arrow_array_reader.h  arrow_c_data_guard_internal.cc  arrow_c_data_guard_internal.h  arrow_c_data_internal.cc  arrow_c_data_internal.h  arrow_struct_guard.cc  arrow_struct_guard.h  base_transaction.cc  base_transaction.h  catalog.h  constants.h  datum.cc  datum.h  delete_file_index.cc  delete_file_index.h  demo.cc  demo_table.cc  demo_table.h  error.h  expected.h  expire_snapshots.h  expression.cc  expression.h  file_format.h  file_io.h  file_io_registry.cc  file_io_registry.h  file_reader.cc  file_reader.h  file_writer.h  iceberg-config.cmake.in  icebergConfig.cmake.in  inheritable_metadata.cc  inheritable_metadata.h  json_internal.cc  json_internal.h  json_serde.cc  json_serde_internal.h  (+110 more)
src/iceberg/arrow/: CMakeLists.txt  arrow_error_transform_internal.h  arrow_file_io.h  arrow_fs_file_io_internal.h  arrow_io.cc  arrow_io_internal.h  arrow_s3_file_io.cc  demo_arrow.h  file_io_register.cc  file_io_register.h  literal_util.cc  literal_util_internal.h  metadata_column_util.cc  metadata_column_util_internal.h  nanoarrow_error_transform_internal.h  s3_properties.h
src/iceberg/avro/: CMakeLists.txt  avro_constants.h  avro_data_util.cc  avro_data_util_internal.h  avro_direct_decoder.cc  avro_direct_decoder_internal.h  avro_direct_encoder.cc  avro_direct_encoder_internal.h  avro_reader.cc  avro_reader.h  avro_register.cc  avro_register.h  avro_register_internal.h  avro_scan.cc  avro_schema_util.cc  avro_schema_util_internal.h  avro_stream.cpp  avro_stream.h  avro_stream_internal.cc  avro_stream_internal.h  avro_stream_test_internal.h  avro_writer.cc  avro_writer.h  demo_avro.cc  demo_avro.h
src/iceberg/benchmark/: CMakeLists.txt  meson.build  metrics_evaluator_benchmark.cc  strict_metrics_evaluator_bench.cc
src/iceberg/catalog/: CMakeLists.txt  in_memory_catalog.cc  in_memory_catalog.h  memory_catalog.cc  memory_catalog.h  meson.build  session_catalog.h
src/iceberg/data/: data_writer.cc  data_writer.h  delete_filter.cc  delete_loader.cc  delete_loader.h  deletion_vector_writer.cc  deletion_vector_writer.h  dv_util.cc  equality_delete_writer.cc  equality_delete_writer.h  file_writer_factory.cc  file_writer_factory.h  position_delete_writer.cc  position_delete_writer.h  writer.cc  writer.h
src/iceberg/deletes/: position_delete_index.cc  position_delete_index.h  position_delete_range_consumer.cc  position_delete_range_consumer.h  roaring_position_bitmap.cc  roaring_position_bitmap.h
src/iceberg/expression/: aggregate.cc  aggregate.h  binder.cc  common.h  evaluator.cc  evaluator.h  expression.cc  expression.h  expression_visitor.h  expressions.cc  expressions.h  inclusive_metrics_evaluator.cc  inclusive_metrics_evaluator.h  json_internal.cc  json_internal.h  json_serde.cc  json_serde_internal.h  literal.cc  literal.h  manifest_evaluator.cc  manifest_evaluator.h  meson.build  predicate.cc  predicate.h  projections.cc  projections.h  residual_evaluator.cc  residual_evaluator.h  sanitize_expression.cc  sanitize_expression.h  strict_metrics_evaluator.cc  strict_metrics_evaluator.h  term.cc  term.h
src/iceberg/expressions/: and.cc  and.h  false.cc  false.h  true.cc  true.h
src/iceberg/inspect/: history_table.cc  history_table.h  meson.build  metadata_table.cc  metadata_table.h  metadata_table_factory.cc  metadata_table_factory.h  row_builder_internal.cc  row_builder_internal.h  snapshots_table.cc  snapshots_table.h
src/iceberg/io/: CMakeLists.txt  fs_file_reader.cc  fs_file_reader.h
src/iceberg/logging/: cerr_logger.cc  cerr_logger.h  config.h.in  log_level.h  log_macros.h  logger.cc  logger.h  loggers.cc  loggers.h  meson.build  short_log_macros.h
src/iceberg/manifest/: manifest_adapter.cc  manifest_entry.h  manifest_filter_manager.cc  manifest_filter_manager.h  manifest_group.cc  manifest_group.h  manifest_list.h  manifest_merge_manager.cc  manifest_merge_manager.h  manifest_reader.cc  manifest_reader.h  manifest_reader_internal.h  manifest_util.cc  manifest_util_internal.cc  manifest_util_internal.h  manifest_writer.cc  manifest_writer.h  rolling_manifest_writer.cc  rolling_manifest_writer.h  v1_metadata_internal.h
src/iceberg/metrics/: commit_report.cc  commit_report.h  counter.cc  counter.h  json_serde.cc  json_serde_internal.h  meson.build  metrics_context.cc  metrics_context.h  metrics_reporter.h  metrics_reporters.cc  metrics_reporters.h  metrics_types.h  scan_report.cc  scan_report.h  timer.cc  timer.h
src/iceberg/parquet/: parquet_data_util.cc  parquet_data_util_internal.h  parquet_metrics.h  parquet_reader.cc  parquet_register.cc  parquet_schema_util.cc  parquet_schema_util_internal.h  parquet_writer.cc  parquet_writer.h
src/iceberg/puffin/: CMakeLists.txt  deletion_vector.cc  deletion_vector.h  demo_puffin.cc  demo_puffin.h  file_metadata.h  json_serde.cc  json_serde_internal.h  meson.build  puffin_format.cc  puffin_format.h  puffin_reader.cc  puffin_reader.h  puffin_writer.cc  puffin_writer.h
src/iceberg/row/: arrow_array_wrapper.cc  arrow_array_wrapper.h  manifest_wrapper.cc  manifest_wrapper.h  struct_like.cc  struct_like.h
src/iceberg/test/: CMakeLists.txt  aggregate_test.cc  arrow_io_test.cc  arrow_s3_file_io_test.cc  arrow_test.cc  assign_id_visitor_test.cc  auth_manager_test.cc  avro_data_test.cc  avro_schema_test.cc  avro_stream_test.cc  avro_test.cc  base64_test.cc  base_transaction_test.cc  bucket_util_test.cc  cerr_logger_test.cc  config_test.cc  content_file_util_test.cc  data_file_set_test.cc  data_writer_test.cc  date_time_util_test.cc  decimal_test.cc  delete_file_index_test.cc  delete_filter_test.cc  delete_loader_test.cc  deletion_vector_writer_test.cc  endpoint_test.cc  eval_expr_test.cc  (+135 more)
(+1003 files in other folders)
